--- a/Wofi/.config/wofi/style.css
+++ b/Wofi/.config/wofi/style.css
@@ -1,41 +1,75 @@
-// dark theme inspired by gruvbox
+/*    GRUVBOX DARK PALETTE
+      --------------------		
+*/
+@define-color bg        #282828;
+@define-color gray1     #928374;
+@define-color red1      #cc241d;
+@define-color red2      #fb4934;
+@define-color green1    #98971a;
+@define-color green2    #b8bb26;
+@define-color yellow1   #d79921;
+@define-color yellow2   #fabd2f;
+@define-color blue1     #458588;
+@define-color blue2     #83a598;
+@define-color purple1   #b16286;
+@define-color purple2   #d3869b;
+@define-color aqua1     #689d6a;
+@define-color aqua2     #8ec07c;
+@define-color gray2     #a89984;
+@define-color fg        #ebdbb2;
+@define-color bg0_h     #1d2021;
+@define-color bg0       @bg;
+@define-color bg1       #3c3836;
+@define-color bg2       #504945;
+@define-color bg3       #665c54;
+@define-color bg4       #7c6f64;
+@define-color bg-gray   @gray1;
+@define-color bg0_s     #32302f;
+@define-color fg4       #a89984;
+@define-color fg3       #bdae93;
+@define-color fg2       #d5c4a1;
+@define-color fg1       @fg;
+@define-color fg0       #fbf1c7;
+@define-color orange1   #d65d0e;
+@define-color orange2   #af3a03;
+
 
 window {
-margin: 0px;
-border: 1px solid #928374;
-background-color: #282828;
+margin: 2px;
+border: 3px solid @orange2;
+background-color: @bg;
 }
 
 #input {
 margin: 5px;
 border: none;
-color: #ebdbb2;
-background-color: #1d2021;
+color: @fg;
+background-color: @bg1;
 }
 
 #inner-box {
 margin: 5px;
 border: none;
-background-color: #282828;
+background-color: @bg1;
 }
 
 #outer-box {
 margin: 5px;
 border: none;
-background-color: #282828;
+background-color: @bg;
 }
 
 #scroll {
-margin: 0px;
+margin: 3px;
 border: none;
 }
 
 #text {
-margin: 5px;
-border: none;
-color: #ebdbb2;
+margin: 16px;
+border: border-box;
+color: @orange1;
 }
 
 #entry:selected {
-background-color: #1d2021;
+background-color: @bg0_h;
 }
